--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Detail"/>
+        <activity android:name=".Detail"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
